--- a/.gitignore
+++ b/.gitignore
@@ -300,6 +300,6 @@ TSWLatexianTemp*
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
 .DS_Store
-
-/latex
+Thesis.bbl-SAVE-ERROR
+/Appunti
 /Fonti
