--- a/.gitignore
+++ b/.gitignore
@@ -304,3 +304,7 @@ Thesis.bbl-SAVE-ERROR
 /Appunti
 /Fonti
 /Esposizione/discorso.md
+/src/Thesis-gitV.pdf
+/src/Thesis-Final_noSign.pdf
+#/src/chapter/acknowledgements.tex
+
