--- a/.gitignore
+++ b/.gitignore
@@ -303,8 +303,9 @@ TSWLatexianTemp*
 Thesis.bbl-SAVE-ERROR
 /Appunti
 /Fonti
-/Esposizione/discorso.md
+/Esposizione
 /src/Thesis-gitV.pdf
 /src/Thesis-Final_noSign.pdf
-#/src/chapter/acknowledgements.tex
+/src/chapter/acknowledgements.tex
+/VersioniPdf
 
