--- a/.gitignore
+++ b/.gitignore
@@ -306,6 +306,6 @@ Thesis.bbl-SAVE-ERROR
 /Esposizione
 /src/Thesis-gitV.pdf
 /src/Thesis-Final_noSign.pdf
-/src/chapter/acknowledgements.tex
+#/src/chapter/acknowledgements.tex
 /VersioniPdf
 
